--- a/templates/classroom_aia/Results.html
+++ b/templates/classroom_aia/Results.html
@@ -8,9 +8,9 @@
 {% block content %}
 
     So far, {{ num_accepted_bids }} bids have been accepted.
-    The price of these units is {{ price }}.
+    You have <strong>{{ player_accepted_bids }} bid{% if player_accepted_bids != 1 %}s{% endif %} </strong> accepted.
+    The auction price of these units is {{ price }}.
     <br>
 
 
-    {% next_button %}
 {% endblock %}
