--- a/templates/classroom_aia/FinalResults.html
+++ b/templates/classroom_aia/FinalResults.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Final bids page
+    Overview of bids in session {{ session_num}}
 {% endblock %}
 
 {% block content %}
@@ -20,7 +20,6 @@ The final price for these items was <strong>{{ price }}</strong> (the first pric
 
 
 
-<button class="btn btn-primary btn-right btn-lg" onclick="self.close()">Close this window</button>
 
 
 
