add cumulative payoff

--- a/templates/classroom_aia/NewSession.html
+++ b/templates/classroom_aia/NewSession.html
@@ -7,8 +7,17 @@
 
 {% block content %}
 
+ <div class="alert alert-warning" role="alert">
 
-    Some info here about stuff that is new and stuff that stays the same.
+    You will get <strong> new endowments </strong> and <strong> new land</strong>.
+ <br>
 
+ Take your time now to think about the best strategy.
+
+ <br><br>
+
+ <h5>Your cumulative payoff is {{ payoff }}.</h5>
+
+ </div>
 
 {% endblock %}
