added adminreport, session.config, subsessions not perfect

--- a/templates/classroom_aia/Bid.html
+++ b/templates/classroom_aia/Bid.html
@@ -3,7 +3,7 @@
 
 {% block title %}
     Place your bids (Period {{ round_in_session }} of
-    {{ Constants.num_rounds_per_session }})
+    {{ rounds_per_session }})
 {% endblock %}
 
 {% block content %}
