--- a/templates/classroom_aia/Results.html
+++ b/templates/classroom_aia/Results.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Results  (Period {{ round_in_session }} of {{ Constants.num_rounds_per_session }})
+    Results  (Period {{ round_in_session }} of {{ rounds_per_session }})
 {% endblock %}
 
 {% block content %}
