working sessiontotals, storing bids for experimenter

--- a/templates/classroom_aia/instructions.html
+++ b/templates/classroom_aia/instructions.html
@@ -5,9 +5,9 @@
 
     You have <strong>{{ num_land }} plots </strong> of land.
     Your endowment is <strong>{{ endowment }} unit{% if endowment != 1 %}s{% endif %} </strong> of water.
-    Remember, in an all-in-auction you can only irrigate if you buy units. <br>
+    Remember, in an all-in-auction you can only irrigate if you buy units.. <br>
 
-    <table style="width:60%">
+    <table style="width:80%">
     <tr><td>
         <h6>Payoff per plot of land if irrigated: </h6>
     </td>
