--- a/templates/classroom_aia/Calculated.html
+++ b/templates/classroom_aia/Calculated.html
@@ -14,7 +14,7 @@
 
     <p>
 
-        After multiple rounds of bidding in the all-in-auction, you bought {% if endowment > 0 %} back {% endif %}
+        After multiple rounds of bidding in the all-in-auction, you bought
         <strong>{{ player_accepted_bids }} unit{% if player_accepted_bids != 1 %}s{% endif %} </strong>
         at a price of <strong>{{ price }}</strong> per unit.
 
